apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
spec:
  selector:
    matchLabels:
      app: httpd
  replicas: 4 
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 81
