ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: traefik-ingress
spec:
  rules:
  - host: ingress.example.com
    http: 
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: nginx
            port:
              number: 80
